signup button updated

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <span class="room-count">1</span>
                     <button class="plus">+</button>
                 </div>
-                <button class="sign-up2">Sign Up</button>
+                <button class="sign-up color">Sign Up</button>
                 <p class="thank-you-message"></p>
             </div>
         </div>
