--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </div>    
 
 
-
+<div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti saepe hic quaerat dicta distinctio doloremque mollitia eos, sunt aperiam ex harum fugiat, delectus quibusdam nostrum ratione repellat. Doloribus, animi numquam!</p></div>
 
     <script src="script.js"></script>
 </body>
